- Création d'un CategoryDAO - Création d'un PropertiesReader - Création et remplissage de la base de donnée en local si H2 grâce à localhost:9000/create_default_db (exécute 2 scripts sql) - Récupération des catégories depuis le DAO pour la création de post

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,22 +14,43 @@
     <title>MonoBlog</title>
 
     <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/authentication.js"></script>
     <script>
         $(document).ready(
-
-                function() {
+                function () {
                     console.log("ready");
 
                     $.ajax({
                         url: "posts",
                         method: "GET",
-                        success: function(data){
+                        success: function (data) {
                             //console.log(data);
                             $("main").html(data);
                         }
                     });
+
+
+                    $("#add_post_button").click(
+                            function () {
+                                console.log("click");
+
+                                $.ajax({
+                                    url: "newpost",
+                                    method: "GET",
+                                    success: function (data) {
+                                        console.log(data);
+
+                                        $("main").html(data);
+                                    }
+                                });
+                            }
+                    )
+
                 }
+
         );
+
+
     </script>
 
 </head>
@@ -43,7 +64,12 @@
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
 </section>
 
-<main></main>
+<div class="button" id="add_post_button">Ajouter un nouveau post</div>
+
+<main>
+
+
+</main>
 
 <footer></footer>
 
@@ -68,8 +94,16 @@
             //url: "https://www.googleapis.com/oauth2/v3/tokeninfo?id_token=ubkbb",
             method: "GET",
             success: function(data){
-                console.log(data);
-                console.log(data.email)
+                if (verifyAuthentication(data))
+                    console.log(" - User connected - ");
+                else
+                    googleUser.disconnect();
+
+
+                //googleUser.disconnect();
+                //console.log(data);
+                //console.log(data.email);
+                //console.log(data.aud);
                 //$("main").html(data);
             },
             error: function(XMLHttpRequest, textStatus, errorThrown) {
