--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/foundation.min.css" />
     <link rel="stylesheet" href="css/app.css" />
 
-    <title>Actu by ESIEA</title>
+    <title>Actus by ESIEA</title>
 
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/authentication.js"></script>
@@ -36,15 +36,25 @@
 </head>
 
 
-<body>
+<body class="row">
 
-<header>Actu by ESIEA</header>
+<header class="row">
+    <div class="large-9  small-12 columns">
 
-<section id="user_info" class="ng-cloak" ng-cloak dynamic="userLoginDynamic">
-    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-</section>
+        <h1 ng-click="home()"><a>Actus by ESIEA </a></br>
+            <small>Bienvenue sur notre blog !</small>
+        </h1>
+    </div>
+    <div class="large-3  small-12 columns">
+        <div class="right">
+            <section id="user_info" class="ng-cloak" ng-cloak dynamic="userLoginDynamic">
+                <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+            </section>
+        </div>
+    </div>
+</header>
 
-<div class="button" id="add_post_button_ng" ng-click="addNewPostForm()">Ajouter un nouveau post</div>
+<hr/>
 
 <main class="row ng-cloak" ng-cloak ng-bind-html="mainView" dynamic="mainDynamic">
 
@@ -57,19 +67,11 @@
     function onSignIn(googleUser) {
         // Useful data for your client-side scripts:
         var profile = googleUser.getBasicProfile();
-        /*console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        console.log("Name: " + profile.getName());
-        console.log("Image URL: " + profile.getImageUrl());
-        console.log("Email: " + profile.getEmail());*/
 
         // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
 
         userEmail = profile.getEmail();
-
-        //console.log(googleUser.getAuthResponse());
-
-        //console.log("ID Token: " + id_token);
 
         $.ajax({
             url: "https://www.googleapis.com/oauth2/v3/tokeninfo?id_token="+id_token,
@@ -86,7 +88,7 @@
                             AngularHelper.Compile($targetDom, data);
                         },
                         error: function (XMLHttpRequest, textStatus, errorThrown) {
-                            alert("ko");
+                            //alert("ko");
                         }
                     });
 
@@ -94,22 +96,11 @@
                 else {
                     googleUser.disconnect();
                 }
-
-
-                //googleUser.disconnect();
-                //console.log(data);
-                //console.log(data.email);
-                //console.log(data.aud);
-                //$("main").html(data);
             },
             error: function(XMLHttpRequest, textStatus, errorThrown) {
-                //console.log("Status: " + textStatus);
-                //console.log("Error: " + errorThrown);
             }
         });
 
-        //googleUser.disconnect();
-        // appID : 307924988327
     };
 
     /**
